@@ -19,6 +19,7 @@ export(LAST_CONV_CHECK)
 export(LAST_MCMC)
 export(MCMC)
 export(MCMC_INFO)
+export(MCMC_without_conv_checker)
 export(append_chains)
 export(check_initial)
 export(convergence_auto)
